hphp/hack/test/typecheck/abstract_typeconsts/enforceable2.php.legacy_decl.exp
File "enforceable2.php", line 9, characters 16-16:
Class D does not correctly implement all required members  (Typing[4302])
File "enforceable2.php", line 9, characters 26-26:
Some members are incompatible with those declared in type C
Read the following to see why:
File "enforceable2.php", line 10, characters 44-51:
Invalid type
File "enforceable2.php", line 5, characters 5-17:
Type constant T was declared __Enforceable here
File "enforceable2.php", line 10, characters 44-51:
This type is not enforceable because it has a type with an erased generic type argument
File "enforceable2.php", line 10, characters 44-51:
Invalid type (Typing[4302])
File "enforceable2.php", line 5, characters 5-17:
Type constant T was declared __Enforceable here
File "enforceable2.php", line 10, characters 44-51:
This type is not enforceable because it has a type with an erased generic type argument
